--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -24,7 +24,7 @@
 			0.8.2 & Popravljena baza podataka & Marko Damjanić & 18.11.2021 \\[3pt] \hline
 			0.8.3 & Popravljena imena slika & Luka Maros & 18.11.2021 \\[3pt] \hline
 			0.8.4 & Dodani dijagrami obrazaca uporabe & Antonio Griparić & 19.11.2021 \\[3pt] \hline
-			
+			0.9 & Dodani dijagrami razreda & Roko Mihalić & 19.11.2021. \\[3pt] \hline
 			
 		\end{longtblr}
 	
