--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -14,17 +14,20 @@
 			\textbf{Rev.}	& \textbf{Opis promjene/dodatka} & \textbf{Autori} & \textbf{Datum}\\[3pt] \hline
 			0.1 & Napravljen predložak.	& Marko Damjanić & 26.10.2021. 		\\[3pt] \hline
 			0.2 & Napravljen opis projekta	& Marko Damjanić & 7.11.2021. 		\\[3pt] \hline
-			0.3 & Dodano u 3.1 : dionici i aktori & Fran Jelavić & 16.11.2021. 		\\[3pt] \hline
-			0.4 & Dodano u 4 : uvod & Fran Jelavić & 16.11.2021. 		\\[3pt] \hline
-			0.5 & Dodano u 3.11 : opis obrazaca uporabe & Luka Maros & 16.11.2021. 		\\[3pt] \hline
-			0.6 & Dodano u 3.11 : opis obrazaca uporabe & Antonio Griparić & 16.11.2021. 		\\[3pt] \hline
-			0.7 & Uspostavljena Baza podataka & Marko Damjanić & 16.11.2021. 		\\[3pt] \hline
-			0.8 & Dodano u 3.1.2 : Sekvencijski dijagrami & Luka Maros & 18.11.2021. 		\\[3pt] \hline
-			0.8.1 & Dodani ostali zahtjevi & Marko Damjanić & 18.11.2021 \\[3pt] \hline	
-			0.8.2 & Popravljena baza podataka & Marko Damjanić & 18.11.2021 \\[3pt] \hline
-			0.8.3 & Popravljena imena slika & Luka Maros & 18.11.2021 \\[3pt] \hline
-			0.8.4 & Dodani dijagrami obrazaca uporabe & Antonio Griparić & 19.11.2021 \\[3pt] \hline
-			0.9 & Dodani dijagrami razreda & Roko Mihalić & 19.11.2021. \\[3pt] \hline
+			0.3 & Dodani dionici i aktori & Fran Jelavić & 16.11.2021. 		\\[3pt] \hline
+			
+			0.4 & Dodan prvi dio obrazaca uporabe & Luka Maros & 16.11.2021. 		\\[3pt] \hline
+			0.4.1 & Dodan drugi dio obrazaca uporabe & Antonio Griparić & 16.11.2021. 		\\[3pt] \hline
+			0.5 & Dodana arhitektura i dizajn sustava& Fran Jelavić & 16.11.2021. 		\\[3pt] \hline
+			0.6 & Uspostavljena Baza podataka & Marko Damjanić & 16.11.2021. 		\\[3pt] \hline
+			0.7 & Dodani Sekvencijski dijagrami & Luka Maros & 18.11.2021. 		\\[3pt] \hline
+			0.7.1 & Dodani ostali zahtjevi & Marko Damjanić & 18.11.2021 \\[3pt] \hline	
+			0.7.2 & Popravljena baza podataka & Marko Damjanić & 18.11.2021 \\[3pt] \hline
+			0.7.3 & Dodani dijagrami obrazaca uporabe & Antonio Griparić & 19.11.2021 \\[3pt] \hline
+			0.8 & Dodani dijagrami razreda & Roko Mihalić & 19.11.2021. \\[3pt] \hline
+			0.9 & Korigiranje teksta & Marko Damjanić & 19.11.2021. \\[3pt] \hline
+			\textbf{1.0}& Provjera dokumentacije & Marko Damjanić & 19.11.2021. \\[3pt] \hline
+			
 			
 		\end{longtblr}
 	
