--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -60,7 +60,15 @@
 				
 				\begin{packed_enum}
 					
-					\item pokrenuti i voditi vlastito natjecanje 
+					\item pregledavati i mijenjati osobne podatke
+					\item izbrisati svoj korisnički račun
+					\item pristupiti zadatcima za vježbu i rješavati ih
+					\item prijaviti i odjaviti se na natjecanja i pristupiti natjecanjima
+					\item osvojiti nagrade
+					\item pokrenuti virtualno natjecanje
+					\item pokrenuti i voditi natjecanje 
+					\item kreirati  zadatke 
+					\item mijenjati i brisati vlastite zadatke
 					
 				\end{packed_enum}
 				
@@ -68,11 +76,18 @@
 				
 				\begin{packed_enum}
 					
+					\item pristupiti zadatcima za vježbu i rješavati ih
+					\item prijaviti i odjaviti se na natjecanja i pristupiti natjecanjima
+					\item osvojiti nagrade
+					\item pokrenuti virtualno natjecanje
+					\item pokrenuti i voditi natjecanje 
+					\item kreirati  zadatke 
+					\item mijenjati vlastite zadatke
 					\item vidjeti popis svih registriranih korisnika i njihovih osobnih podataka
-					\item korisnike brisati i mijenjati im razinu pristupa aplikaciji (natjecatelj, voditelj)
+					\item korisnike brisati i mijenjati im razinu pristupa aplikaciji (natjecatelj, voditelj, administrator)
 					\item pristupiti statistici
-					\item stvarati i brisati zadatke
-					\item odobravati zahtjeve za razinu pristupa voditelja
+					
+					
 					
 				\end{packed_enum}
 			
