--- a/Dokumentacija/PROGI_ProjektnaDokumentacija.tex
+++ b/Dokumentacija/PROGI_ProjektnaDokumentacija.tex
@@ -95,20 +95,20 @@
 			\vspace*{\stretch{3.0}}
 			
 			\huge CodeShark\\
-			\Large Dokumentacija, Rev. \textit{0.8}\\
+			\Large Dokumentacija, Rev. 1.0\\
 			
 			\vspace*{\stretch{12.0}}
 			\normalsize
-			Grupa: \textit{DomeFanClub}\\
-			Voditelj: \textit{Marko Damjanić}\\
+			Grupa: DomeFanClub\\
+			Voditelj: Marko Damjanić\\
 			
 			
 			\vspace*{\stretch{1.0}}
-			Datum predaje: \textit{26. 10. 2021.}\\
+			Datum predaje: 26. 10. 2021.\\
 	
 			\vspace*{\stretch{4.0}}
 			
-			Nastavnik: \textit{Hrvoje Nuić}\\
+			Nastavnik: Hrvoje Nuić\\
 		
 		\end{center}
 
