dodan dijagram stanja

--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -311,9 +311,13 @@
 		\section{Dijagram stanja}
 			
 		
-			\textbf{\textit{dio 2. revizije}}\\
+			Dijagram stanja prikazuje stanja objekta te prijelaze iz jednog stanja u drugo temeljene na događajima. Na slici 4.3 prikazan je dijagram stanja za registriranog natjecatelja. Nakon prijave, natjecatelju se prikazuje početna stranica na kojoj može otiči na stranicu zadataka. Klikom na odabrani zadatak on unosi svoj programski kod koji se šalje na provjeru te dobiva rezultate. Također, može otiči na stranicu natjecanja gdje mi se nudi sva bivša,trenutna i buduća natjecanja. Klikom na natjecanje ga vodi na stranicu tog natjecanje gdje ga ima opciju pokrenuti. Ovisno o statusu trajanja natjecanje, pokreće se različita instanca natjecanja. Na toj instanci se prikazuju zadaci koje je moguće riješiti u ograničenom vremenu. Uz stranice zadataka i natjecanja, natjecatelj uvijek može pristupiti stranici vlastitog profila na kojoj može uređivati svoje podatke, te stranici ostalih članova s koje može gledati profile ostalih korisnika. 
 			
-			\textit{Potrebno je priložiti dijagram stanja i opisati ga. Dovoljan je jedan dijagram stanja koji prikazuje \textbf{značajan dio funkcionalnosti} sustava. Na primjer, stanja korisničkog sučelja i tijek korištenja neke ključne funkcionalnosti jesu značajan dio sustava, a registracija i prijava nisu. }
+			\begin{figure}[H]
+				\includegraphics[width=\textwidth]{slike/DijagramStanja.png} %veličina u odnosu na širinu linije
+				\caption{Dijagram stanja}
+				\label{fig:DijagramStanja} %label mora biti drugaciji za svaku sliku
+			\end{figure}
 			
 			
 			\eject 
