--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -27,6 +27,7 @@
 			0.8 & Dodani dijagrami razreda & Roko Mihalić & 19.11.2021. \\[3pt] \hline
 			0.9 & Korigiranje teksta & Marko Damjanić & 19.11.2021. \\[3pt] \hline
 			\textbf{1.0}& Provjera dokumentacije & Marko Damjanić & 19.11.2021. \\[3pt] \hline
+			1.1 & Dodan dijagram stanja & Marko Damjanić & 13.1.2022. \\[3pt] \hline 
 			
 			
 		\end{longtblr}
