Dodan dijagram aktivnosti

--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -324,10 +324,14 @@
 		
 		\section{Dijagram aktivnosti}
 			
-			\textbf{\textit{dio 2. revizije}}\\
+			Dijagram aktivnosti primjenjuje se za opis modela toka upravljanja ili toka podataka. Ne upotrebljava se za modeliranje događajima poticanog ponašanja. U modeliranju toka upravljanja svaki novi korak poduzima se nakon završenog prethodnog, a naglasak je na jednostavnosti. Na dijagramu aktivnosti 4.4 prikazan je proces rješavanja zadatka. Korisnik se prijavi u sustav, odabere stranicu sa zadacima te odabere željeni zadatak. Prikažu mu se podaci od odabranog zadatka te prostor za unos rješenja. Nakon unosa svojeg rješenja prikaže mu se njegova prolaznost i vrijeme izvođenja.
 			
-			 \textit{Potrebno je priložiti dijagram aktivnosti s pripadajućim opisom. Dijagram aktivnosti treba prikazivati značajan dio sustava.}
-			
+			\begin{figure}[H]
+				\includegraphics[width=\textwidth]{slike/DijagramAktivnosti.png} %veličina u odnosu na širinu linije
+				\caption{Dijagram aktivnosti}
+				\label{fig:DijagramAktivnosti} %label mora biti drugaciji za svaku sliku
+			\end{figure}
+						
 			\eject
 		\section{Dijagram komponenti}
 		
