dodan dnevnik sastajanja

--- a/Dokumentacija/Literatura.tex
+++ b/Dokumentacija/Literatura.tex
@@ -20,6 +20,8 @@
 			\item  The Unified Modeling Language, \url{https://www.uml-diagrams.org/}
 			
 			\item  Astah Community, \url{http://astah.net/editions/uml-new}
+			
+			\item  PostgreSQL Community, \url{https://www.postgresql.org/docs/14/}
 		\end{enumerate}
 		
 		 
