--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -29,6 +29,7 @@
 			\textbf{1.0}& Provjera dokumentacije & Marko Damjanić & 19.11.2021. \\[3pt] \hline
 			1.1 & Dodan dijagram stanja & Marko Damjanić & 13.1.2022. \\[3pt] \hline 
 			1.2 & Dodan dijagram aktivnosti & Marko Damjanić & 13.1.2022. \\[3pt] \hline 
+			1.3 & Dodan dnevnik sastanaka & Marko Damjanić & 14.1.2022. \\[3pt] \hline
 			
 			
 		\end{longtblr}
