--- a/Dokumentacija/Dodatak.tex
+++ b/Dokumentacija/Dodatak.tex
@@ -3,34 +3,103 @@
 		
 		\section*{Dnevnik sastajanja}
 		
-		\textbf{\textit{Kontinuirano osvježavanje}}\\
 		
-		 \textit{U ovom dijelu potrebno je redovito osvježavati dnevnik sastajanja prema predlošku.}
 		
 		\begin{packed_enum}
 			\item  sastanak
 			
 			\item[] \begin{packed_item}
-				\item Datum: u ovom formatu: \today
-				\item Prisustvovali: I.Prezime, I.Prezime
+				\item Datum: 12. listopada 2021. 
+				\item Prisustvovali: M.Damjanić, F.Tomljenović, I.Jeržabek, A.Griparić, R.Mihalić
 				\item Teme sastanka:
 				\begin{packed_item}
-					\item  opis prve teme
-					\item  opis druge teme
+					\item  Moguće alternativne ideje za projekt
+					\item  Početne ideje za tehnologije
 				\end{packed_item}
 			\end{packed_item}
 			
 			\item  sastanak
 			\item[] \begin{packed_item}
-				\item Datum: u ovom formatu: \today
-				\item Prisustvovali: I.Prezime, I.Prezime
+				\item Datum: 14. listopada 2021. 
+				\item Prisustvovali: M.Damjanić, F.Tomljenović, I.Jeržabek, A.Griparić, R.Mihalić, L.Maros, F.Jelavić
 				\item Teme sastanka:
 				\begin{packed_item}
-					\item  opis prve teme
-					\item  opis druge teme
+					\item  Dogovorene korištene tehnologije
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item  sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 28. listopada 2021. 
+				\item Prisustvovali: M.Damjanić, F.Tomljenović, I.Jeržabek, A.Griparić, R.Mihalić, L.Maros, F.Jelavić
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item  Predložen koncept cijelog projekta
+					\item  Podjela posla po članovima za 1.ciklus
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item  sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 12. studeni 2021. 
+				\item Prisustvovali: M.Damjanić, F.Tomljenović, I.Jeržabek, A.Griparić, R.Mihalić, L.Maros, F.Jelavić
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item  Jeržabek je održao predavanje o Reactu
+					\item  Dane upute o spajanju na bazu i pisanju dokumentacije
 				\end{packed_item}
 			\end{packed_item}
 			
+			\eject
+			\item  sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 17. studeni 2021. 
+				\item Prisustvovali: M.Damjanić, I.Jeržabek, A.Griparić, R.Mihalić
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item   Sastanak s asistentom i demosom - evaluacija dosadašnjeg rada
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item  sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 8. prosinca 2021. 
+				\item Prisustvovali: M.Damjanić, F.Tomljenović, I.Jeržabek, A.Griparić, R.Mihalić, L.Maros, F.Jelavić
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item  Prolaženje kroz svih dijelova projekta sa svim članovima
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item  sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 16. prosinca 2021. 
+				\item Prisustvovali: M.Damjanić, F.Tomljenović, I.Jeržabek, A.Griparić, R.Mihalić, L.Maros
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item  Dogovorene raspodjela poslova za 2.ciklus
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item  sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 21. prosinac 2021. 
+				\item Prisustvovali: F.Tomljenović, I.Jeržabek, A.Griparić, R.Mihalić, L.Maros
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item   sastanak s asistentom i demosom - demonstracija alfa inačice
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item  sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 13. siječnja 2022. 
+				\item Prisustvovali: M.Damjanić, I.Jeržabek, R.Mihalić
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item  sastanak s asistentom za zadnje implementacije i izvođenje buduće prezentacije
+				\end{packed_item}
+			\end{packed_item}			
 			%
 			
 		\end{packed_enum}
