--- a/Dokumentacija/Zakljucak.tex
+++ b/Dokumentacija/Zakljucak.tex
@@ -1,6 +1,35 @@
 \chapter{Zaključak i budući rad}
 		
-		\textbf{\textit{dio 2. revizije}}\\
+		Zadatak naˇ se grupe bio je razvoj web aplikacije za online naruˇ civanje jela uz
+		mogu´ cnost upravljanja rezervacijama, katalogom jela, zaposlenicima i recenzijama
+		narudˇ zbi. Nakon 17 tjedana rada u timu i razvoja, ostvarili smo zadani cilj. Sama
+		provedba projekta bila je kroz dvije faze.
+		Prva faza projekta ukljuˇ civala je okupljanje tima za razvoj aplikacije, dodjelu
+		projektnog zadatka i intenzivan rad na dokumentiranju zahtjeva. Kvalitetna pro-
+		vedba prve faze uvelike je olakˇ sala daljnji rad pri realizaciji osmiˇ sljenog sustava.
+		Izradeni obrasci i dijagrami (obrasci uporabe, sekvencijski dijagrami, model baze
+		podataka, dijagram razreda) bili su od pomo´ ci podtimovima zaduˇ zenima za razvoj
+		backenda i frontenda. Izrada vizualnih prikaza idejnih rjeˇ senja problemskog zada-
+		taka uˇ stedila je mnogo vremena u drugom ciklusu kada su ˇ clanovi tima nailazili
+		na nedoumice oko implementacije rjeˇ senja.
+		Druga faza projekta, iako neˇ sto kra´ ca od prve, bila je puno intenzivnija po pi-
+		tanju samostalnog rada ˇ clanova. Manjak iskustva ˇ clanova u izradi sliˇ cnih imple-
+		mentacijskih rjeˇ senja primorao je ˇ clanove na samostalno uˇ cenje odabranih alata i
+		programskih jezika kako bi ispunili dogovorene ciljeve. Osim realizacije rjeˇ senja,
+		u drugoj fazi je bilo potrebno dokumentirati ostale UML dijagrame i izraditi po-
+		pratnu dokumentaciju kako bi budu´ ci korisnici mogli lakˇ se koristiti ili vrˇ siti pre-
+		inake na sustavu. Dobro izraden kostur projekta uˇ stedio nam je mnogo vremena
+		prilikom izrade aplikacije te smo izbjegli mogu´ ce pogreˇ ske u izradi koje bi bile
+		vremenski skupe za ispravljanje u daljnjoj fazi projekta.
+		Komunikacija medu ˇ clanovima tima bila je putem Whatsappa ˇ cime smo posti-
+		gli informiranost svih ˇ clanova grupe o napretku projekta. Mogu´ ce proˇ sirenje pos-
+		toje´ ce inaˇ cice sustava je izrada mobilne aplikacije ˇ cime bi se cilj projektnog zadatka
+		bio ostvaren u ve´ coj mjeri no s web aplikacijom.
+		Sudjelovanje na ovakvom projektu bilo je vrijedno iskustvo svim ˇ clanovima
+		timajersmokrozintenzivnihnekolikotjedanaradaiskusilizajedniˇ ckiradnaistom
+		projektu. Takoder, osjetili smo vaˇ znost dobre vremenske organiziranosti i koordi-
+		niranosti izmedu ˇ clanova tima. Zadovoljni smo postignutim bez obzira na golemi
+		prostor za usavrˇ savanje izradene aplikacije ˇ sto je posljedica neiskustva na takvim i
 		
 		 \textit{U ovom poglavlju potrebno je napisati osvrt na vrijeme izrade projektnog zadatka, koji su tehnički izazovi prepoznati, jesu li riješeni ili kako bi mogli biti riješeni, koja su znanja stečena pri izradi projekta, koja bi znanja bila posebno potrebna za brže i kvalitetnije ostvarenje projekta i koje bi bile perspektive za nastavak rada u projektnoj grupi.}
 		
