--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -30,6 +30,7 @@
 			1.1 & Dodan dijagram stanja & Marko Damjanić & 13.1.2022. \\[3pt] \hline 
 			1.2 & Dodan dijagram aktivnosti & Marko Damjanić & 13.1.2022. \\[3pt] \hline 
 			1.3 & Dodan dnevnik sastanaka & Marko Damjanić & 14.1.2022. \\[3pt] \hline
+			1.4 & Dodana tablica aktivnosti & Marko Damjanić & 14.1.2022. \\[3pt] \hline
 			
 			
 		\end{longtblr}
