--- a/Dokumentacija/Dodatak.tex
+++ b/Dokumentacija/Dodatak.tex
@@ -107,9 +107,7 @@
 		\eject
 		\section*{Tablica aktivnosti}
 		
-			\textbf{\textit{Kontinuirano osvježavanje}}\\
 			
-			 \textit{Napomena: Doprinose u aktivnostima treba navesti u satima po članovima grupe po aktivnosti.}
 
 			\begin{longtblr}[
 					label=none,
@@ -121,36 +119,39 @@
 					hline{1} = {1}{text=\clap{}},
 					rowhead = 1,
 				} 
-				\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime voditelja}}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} \\  
-				Upravljanje projektom 		&  &  &  &  &  &  & \\ 
-				Opis projektnog zadatka 	&  &  &  &  &  &  & \\ 
+				\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Marko Damjanić}}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ivan Jeržabek}}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Roko Mihalić}}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Fran Tomljenović}}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Fran Jelavić}}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Antonio Griparić}}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Luka Maros}}} \\  
+				Upravljanje projektom 		& 25  &  &  &  &  &  & \\ 
+				Opis projektnog zadatka 	& 6  &  &  &  &  &  & \\ 
 				
-				Funkcionalni zahtjevi       &  &  &  &  &  &  &  \\ 
-				Opis pojedinih obrazaca 	&  &  &  &  &  &  &  \\ 
-				Dijagram obrazaca 			&  &  &  &  &  &  &  \\ 
-				Sekvencijski dijagrami 		&  &  &  &  &  &  &  \\ 
-				Opis ostalih zahtjeva 		&  &  &  &  &  &  &  \\ 
+				Funkcionalni zahtjevi       &  &  &  &  & 5 &  &  \\ 
+				Opis pojedinih obrazaca 	&  &  &  &  &  & 10 & 10 \\ 
+				Dijagram obrazaca 			&  &  &  &  &  & 4 &  \\ 
+				Sekvencijski dijagrami 		&  &  &  &  &  &  & 4 \\ 
+				Opis ostalih zahtjeva 		& 1 &  &  &  &  &  &  \\ 
 
-				Arhitektura i dizajn sustava	 &  &  &  &  &  &  &  \\ 
-				Baza podataka				&  &  &  &  &  &  &   \\ 
-				Dijagram razreda 			&  &  &  &  &  &  &   \\ 
-				Dijagram stanja				&  &  &  &  &  &  &  \\ 
-				Dijagram aktivnosti 		&  &  &  &  &  &  &  \\ 
+				Arhitektura i dizajn sustava	 &  &  &  &  & 5 &  &  \\ 
+				Baza podataka				& 15 &  & 5 & 5 &  &  &   \\ 
+				Dijagram razreda 			&  &  & 3 &  &  &  &   \\ 
+				Dijagram stanja				& 3 &  &  &  &  &  &  \\ 
+				Dijagram aktivnosti 		& 2 &  &  &  &  &  &  \\ 
 				Dijagram komponenti			&  &  &  &  &  &  &  \\ 
-				Korištene tehnologije i alati 		&  &  &  &  &  &  &  \\ 
-				Ispitivanje programskog rješenja 	&  &  &  &  &  &  &  \\ 
-				Dijagram razmještaja			&  &  &  &  &  &  &  \\ 
-				Upute za puštanje u pogon 		&  &  &  &  &  &  &  \\  
-				Dnevnik sastajanja 			&  &  &  &  &  &  &  \\ 
-				Zaključak i budući rad 		&  &  &  &  &  &  &  \\  
-				Popis literature 			&  &  &  &  &  &  &  \\  
-				&  &  &  &  &  &  &  \\ \hline 
-				\textit{Dodatne stavke kako ste podijelili izradu aplikacije} 			&  &  &  &  &  &  &  \\ 
-				\textit{npr. izrada početne stranice} 				&  &  &  &  &  &  &  \\  
-				\textit{izrada baze podataka} 		 			&  &  &  &  &  &  & \\  
-				\textit{spajanje s bazom podataka} 							&  &  &  &  &  &  &  \\ 
-				\textit{back end} 							&  &  &  &  &  &  &  \\  
-				 							&  &  &  &  &  &  &\\ 
+				Korištene tehnologije i alati 		& 1 & 1 & 1 &  &  &  &  \\ 
+				Ispitivanje programskog rješenja & 1 &  & 8 &  &  &  &  \\ 
+				Dijagram razmještaja			& 1 &  &  &  &  &  &  \\ 
+				Upute za puštanje u pogon 		& 2 & 2 & 2 &  &  &  &  \\  
+				Dnevnik sastajanja 			& 2 &  &  &  &  &  &  \\ 
+				Zaključak i budući rad 		& 1 &  &  &  &  &  &  \\  
+				Popis literature 			& 1 &  &  &  &  &  &  \\  
+				Izrada početne stranice		&  &  &  &  & 15  &  &  \\ 
+				Izrada stranice s zadacima	&  & 2 &  &  &  & 15 &  \\ 
+				Izrada stranice odabranog zadatka &  & 2 &  &  &  & 15 &  \\  
+			 	Izrada stranice natjecanja		&  & 50 &  &  &  &  &  \\ 
+			 	Izrada stranice korisničkih profila	&  & 3 &  &  &  &  & 35 \\ 
+			 	Izrada stranice članova &  & 2 &  &  & 15 &  &  \\ 
+			 	Izrada baze podataka & 20 &  &  &  &  &  &  \\ 
+				Back end		&  &  & 120 & 100 &  &  &  \\  
+				Puštanje u pogon &  & 35 &  & 5 &  &  &\\ 
+				 							
 			\end{longtblr}
 					
 					
