Dodan zaključak i budući rad

--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -32,6 +32,7 @@
 			1.3 & Dodan dnevnik sastanaka & Marko Damjanić & 14.1.2022. \\[3pt] \hline
 			1.4 & Dodana tablica aktivnosti & Marko Damjanić & 14.1.2022. \\[3pt] \hline
 			1.5 & Popravljena dokumentacija baze & Marko Damjanić & 14.1.2022. \\[3pt] \hline
+			1.6 & Dodan Zaključak i budući rad & Marko Damjanić & 14.1.2022. \\[3pt] \hline
 			
 			
 		\end{longtblr}
